<resources>
    <string name="app_name">ActivityResult</string>
    <string name="hello_world">Hello World</string>
    <string name="color">Color</string>
    <string name="alignment">Alignment</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
</resources>
