<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnLeft"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/left" />

    <Button
        android:id="@+id/btnCenter"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/center" />

    <Button
        android:id="@+id/btnRight"
        style="?android:attr/buttonBarButtonStyle"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/right" />
</LinearLayout>